@startuml AloTra_ClassDiagram_Final

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classHeaderBackgroundColor #4A90D9
skinparam classHeaderFontColor #FFFFFF
skinparam classBorderColor #2C5F8A
skinparam classBackgroundColor #F0F7FF
skinparam stereotypeCBackgroundColor #E8F4FD
skinparam ArrowColor #2C5F8A
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 60

' =============================================
' ENUMS
' =============================================
enum CustomerStatus {
    ACTIVE
    INACTIVE
    BANNED
}
enum EmployeeStatus {
    ACTIVE
    INACTIVE
}
enum EmployeeRole {
    ADMIN
    STAFF
}
enum ProductStatus {
    ACTIVE
    INACTIVE
    OUT_OF_STOCK
}
enum ToppingStatus {
    ACTIVE
    INACTIVE
}
enum OrderStatus {
    PENDING
    PREPARING
    DELIVERING
    DELIVERED
    CANCELLED
}
enum PaymentStatus {
    UNPAID
    PAID
    REFUNDED
}
enum PaymentMethod {
    CASH
    BANK_TRANSFER
    MOMO
}

' =============================================
' NỬA TRÊN: ABSTRACT BASE & USERS
' =============================================
abstract class User {
    - Integer id
    - String username
    - String passwordHash
    - String email
    - String fullName
    - String phone
    + getDisplayName() : String
    + isActive() : boolean
}

class Customer {
    - CustomerStatus status
}

class Employee {
    - EmployeeStatus status
    - EmployeeRole role
    + isAdmin() : boolean
}

User <|-- Customer
User <|-- Employee

Customer ..> CustomerStatus
Employee ..> EmployeeStatus
Employee ..> EmployeeRole

' =============================================
' ĐỊA CHỈ & DANH SÁCH YÊU THÍCH
' =============================================
class Address {
    - Integer id
    - String label
    - String addressLine
    - boolean isDefault
}

class Wishlist {
    - Integer id
    - LocalDateTime addedAt
}

Customer "1" -- "*" Address : manages
Customer "1" -- "1" Wishlist : manages

' =============================================
' TRUNG TÂM: ORDER & PAYMENT
' =============================================
class Order {
    - Integer id
    - LocalDateTime createdAt
    - OrderStatus status
    + getFinalTotal() : BigDecimal
}

class Payment {
    - Integer id
    - PaymentStatus status
    - PaymentMethod method
    - BigDecimal amount
    - String transactionRef
    - LocalDateTime paidAt
}

Order "*" -- "1" Customer : placed by
Order "*" -- "0..1" Employee : approved by
Order ..> OrderStatus

Order "1" -- "1" Payment : has payment
Payment ..> PaymentStatus
Payment ..> PaymentMethod

' =============================================
' NỬA DƯỚI: PRODUCT GROUP & PROMOTION
' =============================================
class Category {
    - Integer id
    - String name
    - String description
}

class Product {
    - Integer id
    - String name
    - String description
    - ProductStatus status
    + isAvailable() : boolean
}

class ProductSize {
    - Integer id
    - String name
    - boolean isActive
}

class ProductVariant {
    - Integer id
    - BigDecimal price
    - ProductStatus status
    + isActive() : boolean
}

class Topping {
    - Integer id
    - String name
    - BigDecimal extraPrice
    - ToppingStatus status
    - String imageUrl
}

class ProductMedia {
    - Integer id
    - String url
}

class Promotion {
    - Integer id
    - String name
    - String code
    - String description
    - LocalDate startDate
    - LocalDate endDate
    - String imageUrl
    + isActive() : boolean
}

abstract class PromotionDetail {
    - Integer id
    - BigDecimal minOrderAmount
}

class PercentagePromotionDetail {
    - Integer discountRate
    - BigDecimal maxDiscountAmount
}

class ValuePromotionDetail {
    - BigDecimal discountValue
}

Category "1" -- "*" Product : contains
Product "1" *-- "many" ProductVariant : has variants
ProductVariant "*" -- "1" ProductSize : has size
Product "1" *-- "many" ProductMedia : contains media

Product ..> ProductStatus
ProductVariant ..> ProductStatus
Topping ..> ToppingStatus
Wishlist "*" -- "1" Product : references
Order "*" -- "0..1" Promotion : applies

Promotion "1" *-- "1" PromotionDetail : has configuration
PromotionDetail <|-- PercentagePromotionDetail
PromotionDetail <|-- ValuePromotionDetail

' =============================================
' CHI TIẾT ĐƠN HÀNG (ORDER ITEMS)
' =============================================
class OrderItem {
    - Integer id
    - Integer quantity
    - BigDecimal unitPrice
    - String note
}

class OrderedTopping {
    - Integer quantity
    - BigDecimal price
}

Order "1" *-- "many" OrderItem : contains
OrderItem "*" o-- "1" ProductVariant
OrderItem "1" *-- "many" OrderedTopping : contains toppings
OrderedTopping "*" o-- "1" Topping

' =============================================
' REVIEW GROUP
' =============================================
class Review {
    - Integer id
    - Integer stars
    - String comment
    - UserId userId
    - ProductId productId
    + hasReply() : boolean
}

@enduml